tests/fixtures/invalid/int_rshift_float.py
# Cannot right shift Int and Float
x: float = 1 >> 1.0
